fix circular faces for hover 1 on small screen

--- a/public/css/cardill-post.css
+++ b/public/css/cardill-post.css
@@ -10,17 +10,13 @@
   margin-bottom: 0px;
 }
 
-@media screen and (max-width: 1680px) {
-
-  .circular {
-    width: 100px;
-    height: 100px;
-    border-radius: 150px;
-    -webkit-border-radius: 150px;
-    -moz-border-radius: 150px;
-    margin-bottom: 0.5em;
-  }
-
+.circular {
+  width: 100px;
+  height: 100px;
+  border-radius: 150px;
+  -webkit-border-radius: 150px;
+  -moz-border-radius: 150px;
+  margin-bottom: 0.5em;
 }
 
 @media screen and (max-width: 670px) {
@@ -35,8 +31,6 @@
   }
 
 }
-
-
 
 .cardillBody {
   background-color: #1e2832;
